--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,103 @@
-# Compiled Object files
-*.slo
-*.lo
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
 *.o
-
-# Compiled Dynamic libraries
 *.so
-*.dylib
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+\.pyc$
+^src/preprocess/\.obj/
+^src/preprocess/Makefile\.depend$
+^src/preprocess/preprocess$
+^src/preprocess/preprocess-debug$
+^src/preprocess/preprocess-profile$
+^src/search/\.obj/
+^src/search/Makefile\.depend$
+^src/search/downward-[124]$
+^src/search/downward-[124]-debug$
+^src/search/downward-[124]-profile$
+^src/search/lp/coin/
+^src/VAL/.*\.o$
+^src/VAL/lex\.yy\.cc$
+^src/VAL/validate$
+^src/validate$
+^new-scripts/checkouts/
+^new-scripts/reports/
+^new-scripts/preprocessed-tasks/
+^new-scripts/exp-.*/
+^misc/
+^new-scripts/
+^ref-results/
+^scripts/
+^src/plan_numbers_and_cost$
+^src/elapsed.time$
+
+downward-1
+downward-2
+downward-4
+preprocess
+validate
+Makefile.depend
+*.pyc
+.gitignore~
+src/agents~
+src/comm~
